package entregas.NevesKelvia.Ejercicio2;

class Colores {
    public char negro() {
        return '.';
    }
    
    public char blanco() {
        return '#';
    }
    
    public char cyan() {
        return '+';
    }
    
    public char magenta() {
        return '*';
    }
    
    public char representacion(char color) {
        return color;
    }
}
